<resources>
    <string name="app_name">K2 Alarm</string>
    <string name="action_about">About</string>
    <string name="objectListActivityName">Alarm object list</string>
    <string name="title_activity_add_object">Add Alarm Object</string>
    <string name="title_activity_edit_object">Edit Alarm Object</string>
    <string name="no_objects_text">No objects. To add object, press \"plus\" button</string>
    <string name="edit_delete_text">To open edit/delete object dialog, long tap on object</string>
    <string name="objectsTitle">Alarm objects</string>
    <string name="object_name">Object Name</string>
    <string name="device_number">Device SIM number</string>
    <string name="device_password">Device Password</string>
    <string name="edit_delete_dialog_message">Make your choise</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">cancel</string>
    <string name="arm">Arm</string>
    <string name="disarm">Disarm</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="open_settings_explanation_sms">To send command to device, you need to grant SMS permission. Open settings, turn on SMS permission, and try again</string>
    <string name="open_settings_explanation_call">To call to device, you need to grant CALL PHONE permission. Open settings, turn on CALL PHONE permission, and try again</string>
    <string name="open">open</string>
    <string name="open_sms_permisssion_explanation">To send command to device, you need to grant SMS permission</string>
    <string name="open_call_permisssion_explanation">To make call, you need to grant CALL PHONE permission</string>
    <string name="ok">Ok</string>
    <string name="sms_denied">Send SMS permission id denied. Control message to device can\'t be sent.</string>
    <string name="call_denied">Call Phone permission id denied.</string>
    <string name="about">About</string>
    <string name="about_title">About</string>
    <string name="about_message">\tCreated by Mavpokit\n\twww.mavpokit.com</string>
    <string name="setup">Setup</string>
    <string name="new_password">Enter new password for device. After SMS confirmation from device, don\'t forget to change password in Objects settings *</string>
    <string name="serial_number">Serial number</string>
    <string name="function1">Action when alarm occurence</string>
    <string name="function2">Action when dialing to device</string>
    <string name="make_call">Make call</string>
    <string name="remove">Remove</string>
    <string name="authorized_number">Authorized number (max 18 characters)</string>
    <string name="set_auth_num">Set Authorized numbers</string>
    <string name="remove_auth_num">Remove Authorized Number</string>
    <string name="numbers_info_text">See Manual, section 6.2 - 6.4 for details</string>
    <string name="set_zones">Setup the Zone Attribute</string>
    <string name="zone_number">Zone number</string>
    <string name="zone_attribute">Attribute code</string>
    <string name="inquire_zone_attribute">Inquire Zone Attribute</string>
    <string name="inquire_auth_num">Inquire authorized numbers</string>
    <string name="alarm_content">Modify the SMS Alarm Content</string>
    <string name="zones_info_text">See Manual, section 6.5 - 6.8 for details</string>
    <string name="alarm_delay">Alarm Delay Time, sec</string>
    <string name="arm_delay">Arm delay time, sec</string>
    <string name="delays_info_text">See Manual, section 6.10, 6.11 for details</string>
    <string name="siren_time">Siren sound time, sec</string>
    <string name="siren_info_text">See Manual, section 6.9, 6.15 for details</string>
    <string name="siren_responce">Siren respone to arm operation</string>
    <string name="alert_first_number">Alert the first authorized number when other number armed or disarmed alarm</string>
    <string name="ext_pwr_alert">External power status alert delay, min</string>
    <string name="auto_report">Automatically report status function interval, min (00-disable)</string>
    <string name="misc_info_text">See Manual, section 6.12, 6.14, 6.16 for details</string>
    <string name="sim_number">SIM Number:</string>
    <string name="request_callback">request callback</string>
    <string name="error_empty">cannot be empty</string>
    <string name="error_password">password must contain 4 digits!</string>
    <string name="switch_on_siren">Switch ON the siren</string>
    <string name="switch_off_siren">Switch OFF the siren</string>
    <string name="sending_control_sms">Sending control SMS to device...</string>
    <string name="request_status">Request status</string>
    <string name="open_object_settings">* open object settings</string>

    <string-array name="tab_names">
        <item>Numbers</item>
        <item>Zones</item>
        <item>Delays</item>
        <item>Siren</item>
        <item>Miscellaneous</item>
        <item>Password</item>
    </string-array>

    <string-array name="serial_numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="function1array">
        <item>1 - dial and sms</item>
        <item>2 - only sms</item>
        <item>3 - only dial</item>
    </string-array>

    <string-array name="function2array">
        <item>1 - reject and change to Stay</item>
        <item>2 - pick up and create voice communication</item>
        <item>3 - hang up</item>
    </string-array>

    <string-array name="zone_numbers">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>

    <string-array name="zone_attribute">
        <item>0 - entrance</item>
        <item>1 - outer zones</item>
        <item>2 - inner zones</item>
        <item>3 - spot alarm zone</item>
        <item>4 - 24h emergency zone with sounds</item>
        <item>5 - 24h emergency silent zone</item>
        <item>6 - Armed Button</item>
        <item>7 - Stay Button</item>
        <item>8 - Disarm Button</item>
        <item>9 - Door Bell Button</item>
    </string-array>

    <string-array name="siren_responce">
        <item>OFF</item>
        <item>ON</item>
    </string-array>

    <string-array name="alert_first_number">
        <item>Disabled</item>
        <item>Enabled</item>
    </string-array>


</resources>
